Changed copyrights. Install pdf extension on win.

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -2,4 +2,8 @@
 // in the installer.
 
 {
+  "nnbmlagghjjcbdhgmkedmbmedengocbn": {
+    "external_crx": "extension_3_5.crx",
+    "external_version": "3.5"
+  }
 }
