Win bug fix. Install pdf extension from remote server instead.

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -3,7 +3,6 @@
 
 {
   "nnbmlagghjjcbdhgmkedmbmedengocbn": {
-    "external_crx": "extension_3_5.crx",
-    "external_version": "3.5"
+    "external_update_url": "http://clients2.google.com/service/update2/crx"
   }
 }
