--- a/chrome/installer/mac/sign_app.sh.in
+++ b/chrome/installer/mac/sign_app.sh.in
@@ -41,13 +41,17 @@ versioned_dir="${app_path}/Contents/Versions/@VERSION@"
 
 browser_app="${app_path}"
 framework="${versioned_dir}/@MAC_PRODUCT_NAME@ Framework.framework"
+sparkle_framework="${framework}/Frameworks/Sparkle.framework/Sparkle"
 helper_app="${versioned_dir}/@MAC_PRODUCT_NAME@ Helper.app"
 
-codesign -s "${codesign_id}" --keychain "${codesign_keychain}" \
-    "${browser_app}" --resource-rules "${browser_app_rules}"
+
+codesign -v "${browser_app}" || codesign -s "${codesign_id}" --keychain "${codesign_keychain}" \
+    "${browser_app}" --resource-rules "${browser_app_rules}" \
+    --signature-size 9400
 
 # Verify everything. Check the framework and helper app to make sure that the
 # signatures are present and weren't altered by the signing process.
+codesign -v "${sparkle_framework}"
 codesign -v "${framework}"
 codesign -v "${helper_app}"
 codesign -v "${browser_app}"
