Finished uncensor extension.

--- a/chrome/browser/resources/uncensor/manifest.json
+++ b/chrome/browser/resources/uncensor/manifest.json
@@ -9,7 +9,8 @@
     "contentSettings",
     "tabs",
     "notifications",
-    "chrome://resources/"
+    "chrome://resources/",
+    "http://tools.bitpop.com/*"
   ],
   "icons" : {
     "48" : "48uncensor.png",
