Added dropdown of most visited sites extension.
It is bundled with a browser itself.
Version 0.3.3.0

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -4,5 +4,9 @@
 {
   "nnbmlagghjjcbdhgmkedmbmedengocbn": {
     "external_update_url": "http://clients2.google.com/service/update2/crx"
+  },
+  "npifdfbbacjcpcbcebmdconiedfhnplj": {
+    "external_crx": "dropdown_most_visited.crx",
+    "external_version": "0.5"
   }
 }
