--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -2,11 +2,13 @@
 // in the installer.
 
 {
-  "nnbmlagghjjcbdhgmkedmbmedengocbn": {
-    "external_update_url": "http://clients2.google.com/service/update2/crx"
-  },
   "npifdfbbacjcpcbcebmdconiedfhnplj": {
     "external_crx": "dropdown_most_visited.crx",
     "external_version": "0.5"
+  },
+  "nnbmlagghjjcbdhgmkedmbmedengocbn": {
+    "external_crx": "docsviewer-extension.crx",
+    "external_version": "3.5",
+    "external_update_url": "http://clients2.google.com/service/update2/crx"
   }
 }
