--- a/chrome/browser/resources/facebook_friends/manifest.json
+++ b/chrome/browser/resources/facebook_friends/manifest.json
@@ -4,10 +4,9 @@
   "version": "1.0",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background_page": "background.html",
-  // "browser_action": {
-  //   "default_icon": "facebook_icon.png",
-  //   "default_popup": "popup.html"
-  // },
+  "browser_action": {
+    "default_title": "Facebook chat"
+  },
   "content_scripts": [
   {
     "matches": ["http://www.facebook.com/connect/login_success.html*"],
