Bugfix release 0.3.4.4 for windows
- Friends sidebar extension reworked
- Added logout facebook ability
- Moved TabContents loading to another location
  checking for new window type

--- a/chrome/browser/resources/facebook_friends/manifest.json
+++ b/chrome/browser/resources/facebook_friends/manifest.json
@@ -7,16 +7,11 @@
   "browser_action": {
     "default_title": "Facebook chat"
   },
-  "content_scripts": [
-  {
-    "matches": ["http://www.facebook.com/connect/login_success.html*"],
-    "js": ["intercept_session.js"]
-  }
-  ],
   "permissions": [
     "tabs",
     "chromePrivate",
-    "*.facebook.com/*"
+    "*.facebook.com/*",
+    "https://api.facebook.com/*"
   ]
 }
 
