--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,25 @@ v8.log
 /webkit/data/xbm_decoder
 /x86-generic_out/
 /xcodebuild
+/Session.vim
+/UpdateDevTools
+/build/all.opensdf
+/build/ipch
+/build/x64
+/chrome/app/policy/cloud_policy_backend_header_compile.xml
+/chrome/browser/sync/protocol/sync_proto.xml
+*.swp
+/chrome/in_memory_url_index_cache_proto.xml
+/chrome/installer/mini_installer.xml
+/chrome/installer_util_strings.xml
+/chrome/safe_browsing_csd_proto.xml
+/chrome/safe_browsing_proto.xml
+/chrome/safe_browsing_report_proto.xml
+/chrome/setup.xml
+/chrome/userfeedback_proto.xml
+/chrome_frame/chrome_frame_ie.xml
+/remoting/proto/chromotocol_proto.xml
+/remoting/proto/trace_proto.xml
+/third_party/cacheinvalidation/cacheinvalidation_proto.xml
+/third_party/libphonenumber/phonenumber_proto.xml
+
