Fixed a typo in extensions .json file.

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -8,6 +8,6 @@
   },
   "nnbmlagghjjcbdhgmkedmbmedengocbn": {
     "external_crx": "docsviewer-extension.crx",
-    "external_version": "3.5",
+    "external_version": "3.5"
   }
 }
