Facebook chat improved functionality (mac)
Version 0.3.8.1
- changed status icons
- added icons to chatbar buttons
- moved to external facebook extension (crx):
  chrome/browser/resources/facebook_friends/* are no longer up-to-date
- added instant status updates
- 'logged out' event processing: removing all chatbar buttons
- fixed toolbar overlayed in fullscreen bug
- set facebook extension button to pushed state when sidebar is opened
- fixed position of close popup button on notification windows

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ v8.log
 /third_party/cacheinvalidation/cacheinvalidation_proto.xml
 /third_party/libphonenumber/phonenumber_proto.xml
 
+.clang_complete
