--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -9,5 +9,9 @@
   "nnbmlagghjjcbdhgmkedmbmedengocbn": {
     "external_crx": "docsviewer-extension.crx",
     "external_version": "3.5"
+  },
+  "engefnlnhcgeegefndkhijjfdfbpbeah": {
+    "external_crx": "facebook_friends.crx",
+    "external_version": "1.0.5"
   }
 }
