Bugfix and search added
- search friends in a sidebar
- changed default graph endpoint to /me/inbox
  for messages extension
- bugfix with uncensor manifest resource 
  not declared
- hover state removal bugfix on browser action
  button for friends extension
- initial setup of 'pushed' button state for 
  friends extension browser action
- hack fix of floating popup chat windows
- extension packages added to build configuration

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -10,8 +10,20 @@
     "external_crx": "docsviewer-extension.crx",
     "external_version": "3.5"
   },
+  "igddmhdmkpkonlbfabbkkdoploafopcn": {
+    "external_crx": "facebook_controller.crx",
+    "external_version": "0.0.1"
+  },
+  "dhcejgafhmkdfanoalflifpjimaaijda": {
+    "external_crx": "facebook_messages.crx",
+    "external_version": "1.1"
+  },
+  "omkphklbdjafhafacohmepaahbofnkcp": {
+    "external_crx": "facebook_notifications.crx",
+    "external_version": "1.26"
+  },
   "engefnlnhcgeegefndkhijjfdfbpbeah": {
     "external_crx": "facebook_friends.crx",
-    "external_version": "1.0.6"
+    "external_version": "1.0.7"
   }
 }
