Extensions bugfix. Browser action positioning fixes.
- version 0.3.12.3
- (ext) reworked dropdown extension (seems to sync properly)
- (ext) problem with login windows solved
- (ext) add error notice while can not connect having a valid access token
- (ext) fixed background page bug in friends extension
- (win) fixed bug with extension button positioning
- (win) increased padding for chatbar

--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -1,12 +1,11 @@
 {
   "name": "Facebook Friends Sidebar",
-  "version": "1.0.20",
+  "version": "1.0.22",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background_page": "background.html",
   "browser_action": {
     "default_title": "Facebook chat",
-    "default_icon": "images/facebook_icon.png",
-    "default_popup": ""
+    "default_icon": "images/facebook_icon.png"
   },
   "permissions": [
     "tabs",
