Modifications for more (win)-like notifications.
- (mac) change notification popup border color
- (mac) change notification popup close button
- minor changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,5 @@ bitpop_specific/extensions/facebook_controller.pem
 bitpop_specific/extensions/facebook_friends.pem
 bitpop_specific/extensions/facebook_messages.pem
 bitpop_specific/extensions/facebook_notifications.pem
+.swn
+bitpop_specific/extensions/dropdown.pem
