Uncensor proxy extension addition + misc
- added uncensor proxy extension with incomplete
  options page and no infobar functionality
- added scripts to automatically archive and
  move to compiler-known location all extension
  files, external_extensions.json is
  autogenerated now
- added removing/showing facebook chat on
  facebook.com for friends sidebar extension
- added fancy-settings options screen to facebook
  friends extension

--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -1,12 +1,19 @@
 {
   "name": "Facebook Friends Sidebar",
-  "version": "1.0.24",
+  "version": "1.1.0",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background_page": "background.html",
+  "options_page": "fancy-settings/source/index.html",
   "browser_action": {
     "default_title": "Facebook chat",
     "default_icon": "images/facebook_icon.png"
   },
+  "content_scripts": [ {
+    "css": [ "suppression/facebook_suppressor.css" ],
+    "js": [ "suppression/contentscript.js" ],
+    "matches": [ "http://*.facebook.com/*", "http://facebook.com/*", "https://facebook.com/*", "https://*.facebook.com/*" ],
+    "run_at": "document_end"
+  } ],
   "permissions": [
     "tabs",
     "chromePrivate",
