--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,6 @@ bitpop_specific/extensions/facebook_messages.pem
 bitpop_specific/extensions/facebook_notifications.pem
 .swn
 bitpop_specific/extensions/dropdown.pem
+bitpop_specific/extensions/dropdown_most_visited.pem
+bitpop_specific/extensions/dropdown_most_visited.pem
+bitpop_specific/extensions/uncensor_proxy.pem
