--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -4,15 +4,15 @@
 {
   "jcpicigjjhpmobmnaoegfajemdcjkjdm": {
     "external_crx": "dropdown_most_visited.crx",
-    "external_version": "0.11"
-  },
-  "nnbmlagghjjcbdhgmkedmbmedengocbn": {
-    "external_crx": "docsviewer-extension.crx",
-    "external_version": "3.5"
+    "external_version": "0.12"
   },
   "igddmhdmkpkonlbfabbkkdoploafopcn": {
     "external_crx": "facebook_controller.crx",
     "external_version": "0.0.10"
+  },
+  "engefnlnhcgeegefndkhijjfdfbpbeah": {
+    "external_crx": "facebook_friends.crx",
+    "external_version": "1.1.0"
   },
   "dhcejgafhmkdfanoalflifpjimaaijda": {
     "external_crx": "facebook_messages.crx",
@@ -22,8 +22,12 @@
     "external_crx": "facebook_notifications.crx",
     "external_version": "1.28"
   },
-  "engefnlnhcgeegefndkhijjfdfbpbeah": {
-    "external_crx": "facebook_friends.crx",
-    "external_version": "1.0.24"
+  "fjfallkmojjifpfkopjoogodecehcjam": {
+    "external_crx": "uncensor_proxy.crx",
+    "external_version": "1.0"
+  },
+  "nnbmlagghjjcbdhgmkedmbmedengocbn": {
+    "external_crx": "docsviewer-extension.crx",
+    "external_version": "3.5"
   }
 }
