Complete and working uncensor proxy extension.
- complete options page
- able to update domain list from settings
- =( doesn't work with redirected domains

--- a/bitpop_specific/extensions/uncensor_proxy/manifest.json
+++ b/bitpop_specific/extensions/uncensor_proxy/manifest.json
@@ -7,9 +7,12 @@
   "permissions" : [
     "tabs",
     "notifications",
-    "http://tools.bitpop.com/*"
+    "http://tools.bitpop.com/*",
+    "http://*/*",
+    "https://*/*"
   ],
   "icons" : {
+    "16": "16uncensorp.png",
     "48" : "48uncensorp.png",
     "128" : "128uncensorp.png"
   }
