--- a/bitpop_specific/extensions/uncensor_proxy/manifest.json
+++ b/bitpop_specific/extensions/uncensor_proxy/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Uncensor ISP",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Your internet provider might try to block your access to some sites without proper proceedure. We give you access automatically through a proxy.",
   "background_page": "background.html",
   "options_page": "fancy-settings/source/index.html",
   "permissions" : [
+    "experimental",
     "tabs",
     "notifications",
     "http://tools.bitpop.com/*",
