Minor functionality update (mac) (win) 0.3.15.2
- improved stability of facebook controller on
  notebook lid close (hibernation)
- messages extension now redirects to facebook
  messages page (custom thread view is not 
  functional but included in this release)
- remove all VIM temp files from extensions
  directories in makeall.sh
- you can't uninstall, disable or hide custom
  BitPop extensions now
- icon for facebook chat extension is changed
- only show extensions which have options page
  included on chrome://extensions page

--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -1,12 +1,18 @@
 {
   "name": "Facebook Friends Sidebar",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background_page": "background.html",
   "options_page": "fancy-settings/source/index.html",
   "browser_action": {
     "default_title": "Facebook chat",
     "default_icon": "images/facebook_icon.png"
+  },
+  "icons": {
+    "128": "images/icon128.png",
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png"
   },
   "content_scripts": [ {
     "css": [ "suppression/facebook_suppressor.css" ],
