Added search bar mybub buttons + sidebar improve

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,84 @@ bitpop_specific/extensions/dropdown_most_visited.pem
 bitpop_specific/extensions/dropdown_most_visited.pem
 bitpop_specific/extensions/uncensor_proxy.pem
 bitpop_specific/extensions/uncensor_domains.pem
+build/common.gypi.orig
+chrome/VERSION.orig
+chrome/app/chromium_strings.grd.orig
+chrome/app/client_util.cc.orig
+chrome/app/generated_resources.grd.orig
+chrome/app/nibs/MainMenu.xib.orig
+chrome/app/theme/chromium/BRANDING.orig
+chrome/app/theme/chromium/about_background.png.orig
+chrome/app/theme/chromium/about_background_rtl.png.orig
+chrome/app/theme/chromium/product_logo.png.orig
+chrome/app/theme/chromium/product_logo_128.png.orig
+chrome/app/theme/chromium/product_logo_16.png.orig
+chrome/app/theme/chromium/product_logo_22.png.orig
+chrome/app/theme/chromium/product_logo_22_mono.png.orig
+chrome/app/theme/chromium/product_logo_22_mono_invert.png.orig
+chrome/app/theme/chromium/product_logo_24.png.orig
+chrome/app/theme/chromium/product_logo_256.png.orig
+chrome/app/theme/chromium/product_logo_32.png.orig
+chrome/app/theme/chromium/product_logo_48.png.orig
+chrome/app/theme/chromium/product_logo_64.png.orig
+chrome/app/theme/chromium/product_logo_white.png.orig
+chrome/app/theme/chromium/wizard_icon.png.orig
+chrome/app/theme/chromium/wizard_icon_rtl.png.orig
+chrome/browser/extensions/extension_context_menu_model.cc.orig
+chrome/browser/extensions/extension_function_dispatcher.cc.orig
+chrome/browser/extensions/extension_preference_api.cc.orig
+chrome/browser/extensions/extension_service.cc.orig
+chrome/browser/google/google_update.cc.orig
+chrome/browser/platform_util.h.orig
+chrome/browser/platform_util_mac.mm.orig
+chrome/browser/platform_util_win.cc.orig
+chrome/browser/profiles/profile.cc.orig
+chrome/browser/profiles/profile.h.orig
+chrome/browser/profiles/profile_impl.cc.orig
+chrome/browser/profiles/profile_impl.h.orig
+chrome/browser/profiles/profile_manager.cc.orig
+chrome/browser/profiles/profile_manager.h.orig
+chrome/browser/resources/options/advanced_options.html.orig
+chrome/browser/resources/options/browser_options.html.orig
+chrome/browser/resources/options/browser_options.js.orig
+chrome/browser/resources/options/options.html.orig
+chrome/browser/resources/options/options_bundle.js.orig
+chrome/browser/ui/browser.cc.orig
+chrome/browser/ui/browser.h.orig
+chrome/browser/ui/browser_window.h.orig
+chrome/browser/ui/cocoa/browser_window_cocoa.h.orig
+chrome/browser/ui/cocoa/browser_window_cocoa.mm.orig
+chrome/browser/ui/cocoa/browser_window_controller.mm.orig
+chrome/browser/ui/cocoa/browser_window_controller_private.mm.orig
+chrome/browser/ui/cocoa/dock_icon.mm.orig
+chrome/browser/ui/cocoa/extensions/browser_action_button.mm.orig
+chrome/browser/ui/cocoa/extensions/browser_actions_controller.mm.orig
+chrome/browser/ui/cocoa/extensions/extension_action_context_menu.mm.orig
+chrome/browser/ui/panels/panel.cc.orig
+chrome/browser/ui/panels/panel.h.orig
+chrome/browser/ui/panels/panel_browser_window_cocoa.h.orig
+chrome/browser/ui/panels/panel_browser_window_cocoa.mm.orig
+chrome/browser/ui/view_ids.h.orig
+chrome/browser/ui/views/about_chrome_view.cc.orig
+chrome/browser/ui/views/browser_actions_container.cc.orig
+chrome/browser/ui/views/frame/browser_view.cc.orig
+chrome/browser/ui/views/frame/browser_view.h.orig
+chrome/browser/ui/views/frame/browser_view_layout.cc.orig
+chrome/browser/ui/webui/options/advanced_options_handler.cc.orig
+chrome/browser/ui/webui/options/browser_options_handler.cc.orig
+chrome/browser/ui/webui/options/options_ui.cc.orig
+chrome/chrome_browser.gypi.orig
+chrome/chrome_exe.gypi.orig
+chrome/chrome_installer_util.gypi.orig
+chrome/common/chrome_constants.cc.orig
+chrome/common/chrome_constants.h.orig
+chrome/common/extensions/extension.cc.orig
+chrome/common/pref_names.cc.orig
+chrome/common/pref_names.h.orig
+chrome/common/url_constants.h.orig
+chrome/installer/gcapi/gcapi.cc.orig
+chrome/installer/mac/sign_versioned_dir.sh.in.orig
+chrome/installer/util/shell_util.cc.orig
+chrome/tools/build/generate_policy_source.py.orig
+chrome/tools/build/mac/tweak_info_plist.orig
+chrome_frame/renderer_glue.cc.orig
