--- a/bitpop_specific/extensions/facebook_messages/manifest.json
+++ b/bitpop_specific/extensions/facebook_messages/manifest.json
@@ -2,7 +2,7 @@
    "background_page": "background.html",
    "browser_action": {
       "default_icon": "images/icon19.png",
-      //"default_popup": "popup.html",
+      "default_popup": "popup.html",
       "default_title": "Facebook Messages"
    },
    "description": "Keep up with your friends, even when you're not on Facebook.",
