Fixes for fullscreen (mac,win). More:
- fixes for extensions autoupdate: allow component
  extensions to be autoupdated
- fix for the User-Agent string Chrome version
  (should be 18. in major)

--- a/bitpop_specific/extensions/facebook_controller/manifest.json
+++ b/bitpop_specific/extensions/facebook_controller/manifest.json
@@ -16,5 +16,6 @@
     "https://www.facebook.com/*",
     "https://api.facebook.com/*",
     "https://graph.facebook.com/*"
-  ]
+  ],
+  "update_url": "http://tools.bitpop.com/ext/updates.xml"
 }
