--- a/bitpop_specific/extensions/dropdown_most_visited/manifest.json
+++ b/bitpop_specific/extensions/dropdown_most_visited/manifest.json
@@ -13,5 +13,6 @@
       "default_popup": "popup.html"
    },
    "permissions": [ "tabs", "history", "bookmarks", "chrome://favicon/" ],
-   "version": "0.13"
+   "version": "0.13",
+   "update_url": "http://tools.bitpop.com/ext/updates.xml"
 }
