--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Facebook Friends Sidebar",
-  "version": "1.6.4",
+  "version": "1.6.9",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background_page": "background.html",
   "options_page": "fancy-settings/source/index.html",
@@ -26,6 +26,7 @@
     "*.facebook.com/*",
     "https://api.facebook.com/*",
     "https://graph.facebook.com/*"
-  ]
+  ],
+  "update_url": "http://tools.bitpop.com/ext/updates.xml"
 }
 
