--- a/bitpop_specific/extensions/uncensor_proxy/manifest.json
+++ b/bitpop_specific/extensions/uncensor_proxy/manifest.json
@@ -16,5 +16,6 @@
     "16": "16uncensorp.png",
     "48" : "48uncensorp.png",
     "128" : "128uncensorp.png"
-  }
+  },
+  "update_url": "http://tools.bitpop.com/ext/updates.xml"
 }
