--- a/bitpop_specific/extensions/facebook_controller/manifest.json
+++ b/bitpop_specific/extensions/facebook_controller/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Facebook Controller",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "Make calls to Facebook Graph API, FQL queries, XMPP chat service.",
   "icons": {
     "128": "icon128.png",
@@ -10,6 +10,7 @@
   },
   "background_page": "background.html",
   "permissions": [
+    "idle",
     "tabs",
     "bitpop",
     "*.facebook.com/*",
