--- a/bitpop_specific/extensions/uncensor_domains/manifest.json
+++ b/bitpop_specific/extensions/uncensor_domains/manifest.json
@@ -1,9 +1,11 @@
 {
   "name": "__MSG_extName__",
-  "version": "1.0",
+  "version": "1.1",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
-  "background_page": "background.html",
+  "background": {
+    "scripts": ["js/parseuri.js", "js/main.js"]
+  },
   "options_page": "options.html",
 
   "permissions" : [
@@ -15,5 +17,7 @@
     "48" : "48uncensor.png",
     "128" : "128uncensor.png"
   },
-  "update_url": "http://tools.bitpop.com/ext/updates.xml"
+  "update_url": "http://tools.bitpop.com/ext/updates.xml",
+  "web_accessible_resources": ["48uncensor.png"],
+  "manifest_version": 2
 }
