--- a/bitpop_specific/extensions/facebook_messages/manifest.json
+++ b/bitpop_specific/extensions/facebook_messages/manifest.json
@@ -1,5 +1,7 @@
 {
-   "background_page": "background.html",
+   "background": {
+     "scripts": ["js/options.js", "js/local-cache.js", "js/desktop_notifications.js", "js/background.js"]
+   },
    "browser_action": {
       "default_icon": "images/icon19.png",
       "default_popup": "popup.html",
@@ -13,8 +15,8 @@
       "48": "images/icon48.png"
    },
    "name": "Facebook Notify Messages",
-   //"options_page": "options.html",
    "permissions": [ "notifications", "tabs", "chrome://favicon/" ],
-   "version": "1.12",
-   "update_url": "http://tools.bitpop.com/ext/updates.xml"
+   "version": "1.13",
+   "update_url": "http://tools.bitpop.com/ext/updates.xml",
+   "manifest_version": 2
 }
