--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,116 @@ v8.log
 /x86-generic_out/
 /xcodebuild
 .svn
+/ash
+/breakpad
+/cc
+/chromeos
+/cloud_print
+/courgette
+/crypto
+/dbus
+/gpu
+/ipc
+/jingle
+/media
+/native_client_sdk
+/net
+/ppapi
+/printing
+/remoting
+/rlz
+/sandbox
+/sdch
+/skia
+/sql
+/sync
+/testing
+/tools
+/ui
+/webkit
+/.DEPS.git
+/AUTHORS
+/DEPS
+/PRESUBMIT.py
+/WATCHLISTS
+/codereview.settings
+/third_party/active_doc
+/third_party/adobe
+/third_party/android_testrunner
+/third_party/apple_apsl
+/third_party/apple_sample_code
+/third_party/apple_webkit
+/third_party/ashmem
+/third_party/bsdiff
+/third_party/bspatch
+/third_party/bzip2
+/third_party/cacheinvalidation
+/third_party/cld
+/third_party/closure_linter
+/third_party/codesighs
+/third_party/devscripts
+/third_party/expat
+/third_party/flot
+/third_party/fuzzymatch
+/third_party/gles2_book
+/third_party/gpsd
+/third_party/gtk+
+/third_party/handlebar
+/third_party/harfbuzz-ng
+/third_party/harfbuzz
+/third_party/hyphen
+/third_party/iaccessible2
+/third_party/iccjpeg
+/third_party/icon_family
+/third_party/isimpledom
+/third_party/jemalloc
+/third_party/json_minify
+/third_party/jsoncpp
+/third_party/khronos
+/third_party/launchpad_translations
+/third_party/lcov-1.9
+/third_party/lcov
+/third_party/leveldatabase
+/third_party/libXNVCtrl
+/third_party/libevent
+/third_party/libexif
+/third_party/libjingle
+/third_party/libjpeg
+/third_party/libphonenumber
+/third_party/libpng
+/third_party/libusb
+/third_party/libva
+/third_party/libwebp
+/third_party/libxml
+/third_party/libxslt
+/third_party/lzma_sdk
+/third_party/mach_override
+/third_party/mesa
+/third_party/modp_b64
+/third_party/molokocacao
+/third_party/mongoose
+/third_party/mozilla
+/third_party/npapi
+/third_party/ocmock
+/third_party/openmax
+/third_party/ply
+/third_party/protobuf
+/third_party/pyftpdlib
+/third_party/pymox
+/third_party/python_gflags
+/third_party/qcms
+/third_party/re2
+/third_party/safe_browsing
+/third_party/simplejson
+/third_party/snappy
+/third_party/sqlite
+/third_party/sudden_motion_sensor
+/third_party/swiftshader
+/third_party/talloc
+/third_party/tcmalloc
+/third_party/tlslite
+/third_party/webdriver
+/third_party/wtl
+/third_party/yasm
+/third_party/zlib
+
