--- a/bitpop_specific/extensions/uncensor_domains/manifest.json
+++ b/bitpop_specific/extensions/uncensor_domains/manifest.json
@@ -6,9 +6,8 @@
   "background": {
     "scripts": ["js/parseuri.js", "js/main.js"]
   },
-  "options_page": "options.html",
-
   "permissions" : [
+    "bitpop",
     "tabs",
     "notifications",
     "http://tools.bitpop.com/*"
