--- a/bitpop_specific/extensions/uncensor_proxy/manifest.json
+++ b/bitpop_specific/extensions/uncensor_proxy/manifest.json
@@ -7,6 +7,7 @@
   },
   "options_page": "fancy-settings/source/index.html",
   "permissions" : [
+    "bitpop",
     "webRequest",
     "tabs",
     "notifications",
