--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Facebook Friends Sidebar",
-  "version": "1.10.0",
+  "version": "1.10.2",
   "description": "Shows a sidebar with a list of Facebook friends to the right of current web page.",
   "background": {
     "scripts": [
@@ -23,6 +23,10 @@
     "css": [ "suppression/facebook_suppressor.css" ],
     "js": [ "suppression/contentscript.js" ],
     "matches": [ "http://*.facebook.com/*", "http://facebook.com/*", "https://facebook.com/*", "https://*.facebook.com/*" ],
+    "run_at": "document_end"
+  }, {
+    "matches": [ "http://docs.google.com/*", "https://docs.google.com/*" ],
+    "js": [ "suppression/google_drive.js" ],
     "run_at": "document_end"
   } ],
   "permissions": [
