--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,10 @@ v8.log
 /third_party/yasm
 /third_party/zlib
 
+bitpop_specific/extensions/dropdown_most_visited.pem
+bitpop_specific/extensions/facebook_controller.pem
+bitpop_specific/extensions/facebook_friends.pem
+bitpop_specific/extensions/facebook_messages.pem
+bitpop_specific/extensions/facebook_notifications.pem
+bitpop_specific/extensions/uncensor_domains.pem
+bitpop_specific/extensions/uncensor_proxy.pem
