--- a/bitpop_specific/extensions/facebook_controller/manifest.json
+++ b/bitpop_specific/extensions/facebook_controller/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Facebook Controller",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "Make calls to Facebook Graph API, FQL queries, XMPP chat service.",
   "icons": {
     "128": "icon128.png",
@@ -25,6 +25,14 @@
     "https://www.facebook.com/*",
     "https://api.facebook.com/*",
     "https://graph.facebook.com/*"
+  ],
+  "content_scripts": [ {
+    "js": [ "js/autosize.js" ],
+    "matches": [ "http://*.facebook.com/*state%3Dbitpop*", "https://facebook.com/*state%3Dbitpop*", "https://facebook.com/*state%3Dbitpop*", "https://*.facebook.com/*state%3Dbitpop*" ],
+    "run_at": "document_end"
+  } ],
+  "web_accessible_resources": [
+    "autosize.css"
   ],
   "update_url": "http://tools.bitpop.com/ext/updates.xml",
   "manifest_version": 2
