WIP 2. 75% ready sync integration.

--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -28,6 +28,10 @@
     "matches": [ "http://docs.google.com/*", "https://docs.google.com/*" ],
     "js": [ "suppression/google_drive.js" ],
     "run_at": "document_end"
+  }, {
+    "matches": [ "http://dev.bitpop.com:8000/authentication_success/*" ],
+    "js": [ "js/sync_login_proxy.js" ],
+    "run_at": "document_end"
   } ],
   "permissions": [
     "tabs",
