WIP 5. Enabling the state tracker.

--- a/bitpop_specific/extensions/facebook_friends/manifest.json
+++ b/bitpop_specific/extensions/facebook_friends/manifest.json
@@ -29,7 +29,8 @@
     "js": [ "suppression/google_drive.js" ],
     "run_at": "document_end"
   }, {
-    "matches": [ "http://dev.bitpop.com:8000/authentication_success/*" ],
+    "matches": [ "http://dev.bitpop.com:8000/authentication_success/*",
+                 "http://dev.bitpop.com:8000/login-error/*" ],
     "js": [ "js/sync_login_proxy.js" ],
     "run_at": "document_end"
   } ],
