Uncensor proxy rework. WIP.

--- a/bitpop_specific/extensions/uncensor_proxy/manifest.json
+++ b/bitpop_specific/extensions/uncensor_proxy/manifest.json
@@ -11,6 +11,7 @@
     "webRequest",
     "tabs",
     "notifications",
+    "proxy",
     "http://tools.bitpop.com/*",
     "http://*/*",
     "https://*/*"
