Fixes to sidebar extension load on startup.
+ Various fixes:
  - better logout behavior in controller extension
  - closing options page for google docs extension
    on startup
  - load history for messages on chat button
    clicked event
  - changed images for messages and notifications
    extensions
  - centering horizontally for promo page
  - fixed bitpop logo on sync_overlay page
  - link to docs viewer extension now points to
    chrome extension web store

--- a/chrome/browser/extensions/default_extensions/external_extensions.json
+++ b/chrome/browser/extensions/default_extensions/external_extensions.json
@@ -8,19 +8,19 @@
   },
   "igddmhdmkpkonlbfabbkkdoploafopcn": {
     "external_crx": "facebook_controller.crx",
-    "external_version": "1.5.7"
+    "external_version": "1.5.13"
   },
   "engefnlnhcgeegefndkhijjfdfbpbeah": {
     "external_crx": "facebook_friends.crx",
-    "external_version": "1.10.7"
+    "external_version": "1.10.9"
   },
   "dhcejgafhmkdfanoalflifpjimaaijda": {
     "external_crx": "facebook_messages.crx",
-    "external_version": "1.18"
+    "external_version": "1.19"
   },
   "omkphklbdjafhafacohmepaahbofnkcp": {
     "external_crx": "facebook_notifications.crx",
-    "external_version": "2.7"
+    "external_version": "2.8"
   },
   "oadgfoondcimpmclpkphkdnjhaddaehg": {
     "external_crx": "uncensor_domains.crx",
@@ -31,8 +31,7 @@
     "external_version": "1.8"
   },
   "nnbmlagghjjcbdhgmkedmbmedengocbn": {
-    "external_crx": "docsviewer-extension.crx",
-    "external_version": "3.5"
+    "external_update_url": "http://clients2.google.com/service/update2/crx"
   },
   "geoplninmkljnhklaihoejihlogghapi": {
     "external_crx": "share_button.crx",
